--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,8 @@
 		<link rel="icon" type="image/x-icon" class="js-site-favicon" href="resource/personal/favicon.ico">
 		<title>Dreamline91's homepage</title>
 		<script type="text/javascript" src="resource/external/three.js"></script>
+		<script type="text/javascript" src="resource/external/LoaderSupport.js"></script>
+		<script type="text/javascript" src="resource/external/OBJLoader2.js"></script>
 		<style>
 			html, body { 
 				margin: 0;
@@ -13,46 +15,71 @@
 	<body>
 		<script>
 			var camera, scene, renderer;
+
+			var geometry, material, mesh, loader;
+
 			var particles_fire;
-			const NUM_FIRE = 1000;
+			var particle;
+			const NUM_FIRE = 1500;
 			const DELTA_Y_FIRE = 5;
+			const DELTA_Z_FIRE = -2;
 			const RANGE_PX_FIRE = 2.5;
 			const RANGE_PY_FIRE = 1.5;
 			const RANGE_VX_FIRE = 0.05;
-			const RANGE_VY_FIRE = 0.1;
+			const RANGE_VY_FIRE = 0.10;
 			const RANGE_AY_FIRE = 0.002;
 			const RANGE_DEGREE = Math.PI / 180 * 360;
 			const DELTA_FRAME = 0.005;
 			const RANGE_FRAME = 0.005;
+
 			init();
 			animate();
+
 			function init(){
 				var width = window.innerWidth;
 				var height = window.innerHeight;
+
 				camera = new THREE.PerspectiveCamera(50, width / height, 1, 1000);
-				camera.position.z = 25;
-				renderer = new THREE.WebGLRenderer({antialias: true, alpha: true});
+				camera.position.y = 15;
+				camera.position.z = 30;
+				camera.up.set(0, 30, 15);
+
+				renderer = new THREE.WebGLRenderer({
+					antialias: true, 
+					alpha: true
+				});
 				renderer.setPixelRatio(window.devicePixelRatio);
 				renderer.setSize(window.innerWidth, window.innerHeight);
 				renderer.autoClear = false;
+				renderer.shadowMap.enabled = true;
+
 				document.body.appendChild(renderer.domElement);
+
 				scene = new THREE.Scene();
 				scene.background = new THREE.Color(0x0);
+
+
+				geometry = new THREE.PlaneGeometry(60,60,60,60);
+				material = new THREE.MeshPhongMaterial({color: 0xcccccc});
+				mesh = new THREE.Mesh(geometry, material);
+				mesh.rotation.x = -0.5 * Math.PI;
+				mesh.receiveShadow = true;
+				scene.add(mesh);
+
 				particles_fire = new Array();
-				var particle, geometry, meterial;
 				for(var i = 0; i < NUM_FIRE; ++i){
 					particles_fire[i] = {
 						mesh: null,
 						c: 0x3fffff,
 						t: 1.0, 
 						r: DELTA_FRAME + Math.random() * RANGE_FRAME,
-						p: [(Math.random() * RANGE_PX_FIRE) * Math.cos(Math.random() * RANGE_DEGREE), (Math.random() * RANGE_PY_FIRE) * Math.sin(Math.random() * RANGE_DEGREE) - DELTA_Y_FIRE, 0], 
+						p: [(Math.random() * RANGE_PX_FIRE) * Math.cos(Math.random() * RANGE_DEGREE), (Math.random() * RANGE_PY_FIRE) * Math.sin(Math.random() * RANGE_DEGREE) + DELTA_Y_FIRE, DELTA_Z_FIRE], 
 						v: [(Math.random() * RANGE_VX_FIRE) * Math.cos(Math.random() * RANGE_DEGREE), (Math.random() * RANGE_VY_FIRE) * Math.sin(Math.random() * RANGE_DEGREE), 0], 
 						a: [0, RANGE_AY_FIRE, 0]
 					};
 					particle = particles_fire[i];
 					geometry = new THREE.PlaneGeometry(3, 5);
-					material = new THREE.MeshBasicMaterial({
+					material = new THREE.MeshPhongMaterial({
 						color: 0x3fffff,
 						map: new THREE.TextureLoader().load("https://raw.githubusercontent.com/jaejunha/PersonalPage/master/source/resource/fire.png"),
 						transparent: true,
@@ -61,10 +88,31 @@
 						blending: THREE.AdditiveBlending
 					});
 					particle.mesh = new THREE.Mesh(geometry, material);
+					particle.mesh.castShadow = true;
+					particle.mesh.receiveShadow = true;
 					scene.add(particle.mesh);
 					particle.mesh.position.set(particle.p[0], particle.p[1], particle.p[2]);
 				}
+
+
+
+				loader = new THREE.OBJLoader2();
+				loader.load('https://raw.githubusercontent.com/jaejunha/PersonalPage/master/source/resource/dreamline91.obj', (event) => {
+					mesh = event.detail.loaderRootNode;
+					mesh.children[0].material[0].emissive = {b: 0.5, g: 0.5, r: 0.5}
+					mesh.position.set(0, 3, 0); 
+					mesh.rotation.y = -0.5 * Math.PI;
+					mesh.scale.set(2,2,2);
+					mesh.castShadow = true;
+					scene.add(mesh);
+				});
+
+				var light = new THREE.SpotLight(0xffffff);
+				light.position.set(0, 15, 20);  
+				light.castShadow = true;
+				scene.add(light);  
 			}
+
 			function animate() {
 				requestAnimationFrame(animate);
 				renderer.clear();
@@ -77,11 +125,12 @@
 						particle.t = 1.0;
 						particle.c = 0x3fffff;
 						particle.r = DELTA_FRAME + Math.random() * RANGE_FRAME;
-						particle.p = [(Math.random() * RANGE_PX_FIRE) * Math.cos(Math.random() * RANGE_DEGREE), (Math.random() * RANGE_PY_FIRE) * Math.sin(Math.random() * RANGE_DEGREE) - DELTA_Y_FIRE, 0]; 
+						particle.p = [(Math.random() * RANGE_PX_FIRE) * Math.cos(Math.random() * RANGE_DEGREE), (Math.random() * RANGE_PY_FIRE) * Math.sin(Math.random() * RANGE_DEGREE) + DELTA_Y_FIRE, DELTA_Z_FIRE]; 
 						particle.v = [(Math.random() * RANGE_VX_FIRE) * Math.cos(Math.random() * RANGE_DEGREE), (Math.random() * RANGE_VY_FIRE) * Math.sin(Math.random() * RANGE_DEGREE), 0]; 
 					} else {	
 						particle.c = 0x3fffff;
-						particle.p = [particle.p[0] + particle.v[0] * (1 - particle.t), particle.p[1] + particle.v[1] * (1 - particle.t), 0]
+						particle.c = ((63 - 63 * (1 - particle.t)) << 16) + ((255 - 255 * (1 - particle.t)) << 8) + (255 - 255 * (1 - particle.t))
+						particle.p = [particle.p[0] + particle.v[0] * (1 - particle.t), particle.p[1] + particle.v[1] * (1 - particle.t), DELTA_Z_FIRE]
 						particle.v[1] = particle.v[1] + particle.a[1];
 					}
 					particle.mesh.material.opacity = particle.t;
@@ -90,6 +139,11 @@
 				}
 				renderer.render(scene, camera);
 			}
+
+
+		
+
+
 		</script>
 	</body>
 </html>
