--- a/source/index.html
+++ b/source/index.html
@@ -30,7 +30,7 @@
 			const DELTA_FRAME = 0.005;
 			const RANGE_FRAME = 0.005;
 
-			var clock, mixer;
+			var clock, bird, mixer, actions, index = 0;
 
 			init();
 			animate();
@@ -58,7 +58,7 @@
 				scene = new THREE.Scene();
 				scene.background = new THREE.Color(0x000000);
 
-				geometry = new THREE.PlaneGeometry(60,60,60,60);
+				geometry = new THREE.PlaneGeometry(60, 60, 1, 1);
 				material = new THREE.MeshPhongMaterial({color: 0xcccccc});
 				mesh = new THREE.Mesh(geometry, material);
 				mesh.rotation.x = -0.5 * Math.PI;
@@ -97,7 +97,7 @@
 					material = new THREE.MeshPhongMaterial({
 						transparent: true
 					});
-					material.emissive = {b: 0.5, g: 0.5, r: 0.5};
+					material.emissive = {b: 0.3, g: 0.3, r: 0.3};
 					mesh = new THREE.Mesh(geometry, material);
 					mesh.position.set(0, 1.4, -2.5);
 					mesh.rotation.y = -0.5 * Math.PI;
@@ -106,33 +106,42 @@
 					scene.add(mesh);
 				});
 
-
 				clock = new THREE.Clock();
 				new THREE.JSONLoader().load("resource/personal/bird.json", function (geometry, materials) {
 					materials.forEach(function (material) { 
-						material.color = {b: 0.2, g: 0.2, r: 0.2};
-						material.specular = {b: 0.5, g: 0.5, r: 0.5};
+						material.specular = {b: 0.05, g: 0.05, r: 0.05};
 						material.skinning = true;
+						material.opacity = 0.3;
+						material.transparent = true;
+						material.color = {b: 1, g: 1, r: 1};
+						material.side = THREE.FrontSide;
+						material.blending = THREE.CustomBlending;
+						material.blendEquation = THREE.AddEquation;
+						material.blendSrc = THREE.OneFactor;
+						material.blendDst = THREE.OneMinusSrcAlphaFactor;
+
 					});
-			
-					mesh = new THREE.SkinnedMesh(geometry, new THREE.MeshFaceMaterial(materials));
-					mesh.position.set(9, 12, -10);
-					mesh.scale.set(1.5, 1.5, 1.5);
-					mesh.rotation.x = 0.1 * Math.PI;
-					mixer = new THREE.AnimationMixer(mesh);
-					var actions = new Array(geometry.animations.length);
+					materials[1].color = {b: 0, g: 1, r: 1};
+					materials[2].specular = {b: 1, g: 1, r: 1};
+					materials[3].specular = {b: 0, g: 0, r: 0};
+
+					bird = new THREE.SkinnedMesh(geometry, new THREE.MeshFaceMaterial(materials));
+					bird.position.set(0, 9, 1.5);
+					bird.scale.set(0.01, 0.01, 0.01);
+					bird.rotation.x = 0.05 * Math.PI;
+					mixer = new THREE.AnimationMixer(bird);
+					actions = new Array(geometry.animations.length);
 					for(var i = 0; i < actions.length; i++){
 						actions[i] = mixer.clipAction(geometry.animations[i]);
 						actions[i].setEffectiveWeight(1);
 						actions[i].enabled = true;
 					}
-					scene.add(mesh);
-				 	actions[2].play();
+					scene.add(bird);
 				});
 
 
 				var light = new THREE.SpotLight(0xffffff);
-				light.position.set(0, 15, 20);  
+				light.position.set(0, 12, 16);  
 				light.castShadow = true;
 				light.shadow.mapSize.width = 5120;
 				light.shadow.mapSize.height = 5120;
@@ -155,8 +164,20 @@
 						particle.r = DELTA_FRAME + Math.random() * RANGE_FRAME;
 						particle.p = [(Math.random() * RANGE_PX_FIRE) * Math.cos(Math.random() * RANGE_DEGREE), (Math.random() * RANGE_PY_FIRE) * Math.sin(Math.random() * RANGE_DEGREE) + DELTA_Y_FIRE, DELTA_Z_FIRE]; 
 						particle.v = [(Math.random() * RANGE_VX_FIRE) * Math.cos(Math.random() * RANGE_DEGREE), (Math.random() * RANGE_VY_FIRE) * Math.sin(Math.random() * RANGE_DEGREE), 0]; 
+
+						if(index == 0){
+							bird.scale.set(1.25, 1.25, 1.25);
+							var from = actions[index].play();
+							index = 2;
+							setTimeout(function() {
+								bird.position.set(7.5, 9, 1.5);
+								var to = actions[index].play();	
+								from.enabled = true;
+								to.enabled = true;
+								from.crossFadeTo(to, 0);
+							}, 2500);
+						}
 					} else {	
-						particle.c = 0x3fffff;
 						particle.c = ((63 - 63 * (1 - particle.t)) << 16) + ((255 - 255 * (1 - particle.t)) << 8) + (255 - 255 * (1 - particle.t))
 						particle.p = [particle.p[0] + particle.v[0] * (1 - particle.t), particle.p[1] + particle.v[1] * (1 - particle.t), DELTA_Z_FIRE]
 						particle.v[1] = particle.v[1] + particle.a[1];
@@ -168,7 +189,6 @@
 				
 				if(mixer)
 					mixer.update(clock.getDelta());
-
 
 				renderer.render(scene, camera);
 			}
