--- a/source/index.html
+++ b/source/index.html
@@ -13,10 +13,12 @@
 	<body>
 		<script>
 			var camera, scene, renderer;
+			
+			var cube;
 
-			var geometry, material, mesh, loader, texture;
+			var geometry, material, mesh, texture;
 			const DELTA_Y_CAMERA = 15;
-			const DELTA_Z_CAMERA = 30;
+			const DELTA_Z_CAMERA = 35;
 
 			var particles_fire;
 			var particle;
@@ -36,14 +38,17 @@
 			const COLOR_G_FIRE = 255;
 			const COLOR_B_FIRE = 255;
 
-			var clock, soul, mixer, actions, frame = 0;
+			var clock, soul, mixer, action, frame = 0;
 			const DELTA_START_SOUL = 50;
 			const DELTA_END_SOUL = 230;
 			const DELTA_Z_SOUL = -1.5;
 
 			var light;
-			const DELTA_Y_LIGHT = 12;
-			const DELTA_Z_LIGHT = 16;
+			const DELTA_Y_LIGHT1 = 12;
+			const DELTA_Z_LIGHT1 = 16;
+			const DELTA_Y_LIGHT2 = 20;
+			const DELTA_Z_LIGHT2 = 4;
+			const DISTANCE_LIGHT = 40;
 			const RESOLUTION_SHADOW = 5120;
 
 			init();
@@ -68,17 +73,36 @@
 				renderer.shadowMap.enabled = true;
 
 				document.body.appendChild(renderer.domElement);
+/*
+				var path = [
+					'resource/external/px.jpg', 'resource/external/nx.jpg',
+					'resource/external/py.jpg', 'resource/external/ny.jpg',
+					'resource/external/pz.jpg', 'resource/external/nz.jpg'	
+				];
 
+				cube = new THREE.CubeTextureLoader().load(path);
+*/
 				scene = new THREE.Scene();
 				scene.background = new THREE.Color(0x000000);
 
-				geometry = new THREE.PlaneGeometry(60, 60, 1, 1);
+				geometry = new THREE.PlaneGeometry(60, 60, 4, 4);
+				texture = new THREE.TextureLoader().load("resource/external/grass.jpg");
+				texture.wrapS = THREE.RepeatWrapping;
+				texture.wrapT = THREE.RepeatWrapping;
+				texture.repeat.set(4, 4);
+				var normal  = new THREE.TextureLoader().load( "resource/external/grass_normal.jpg" );
+				normal.wrapS = THREE.RepeatWrapping;
+				normal.wrapT = THREE.RepeatWrapping;
+				normal.repeat.set(4, 4);
 				material = new THREE.MeshPhongMaterial({
-					color: 0xd86700,
+					color: 0xffffff,
 					side: THREE.DoubleSide,
-					normalMap: new THREE.TextureLoader().load( "resource/external/grass_normal.jpg" ),
-					normalScale: new THREE.Vector2(0.1, 0.1)
-				});
+					map: texture,
+					normalMap: normal,
+					normalScale: new THREE.Vector2(10, 10)
+				});		
+
+				material.map.minFilter = THREE.LinearFilter;
 				material.normalMap.minFilter = THREE.LinearFilter;
 				mesh = new THREE.Mesh(geometry, material);
 				mesh.rotation.x = -0.5 * Math.PI;
@@ -131,7 +155,7 @@
 					});
 					material.emissive = {b: 0.3, g: 0.3, r: 0.3};
 					mesh = new THREE.Mesh(geometry, material);
-					mesh.position.set(0, 1.4, -2.5);
+					mesh.position.set(0, 1.4, 0);
 					mesh.rotation.y = -0.5 * Math.PI;
 					mesh.scale.set(2, 2, 2);
 					mesh.castShadow = true;
@@ -146,48 +170,40 @@
 					mesh = new THREE.Mesh(geometry, material);
 					mesh.position.set(0, 1, -8);
 					mesh.scale.set(1.25, 1.25, 1.25);
-					mesh.castShadow = true;
 					scene.add(mesh);
 				});
 
 				clock = new THREE.Clock();
 				new THREE.JSONLoader().load("resource/personal/soul.json", function (geometry, materials) {
 					materials.forEach(function (material) { 
-						material.specular = {b: 0.05, g: 0.05, r: 0.05};
+						material.specular = {b: 1, g: 1, r: 1};
 						material.skinning = true;
-						material.opacity = 0.3;
+						material.opacity = 0.5;
 						material.transparent = true;
-						material.color = {b: 1, g: 1, r: 1};
 						material.side = THREE.FrontSide;
-
-						material.blending = THREE.CustomBlending;
-						material.blendEquation = THREE.AddEquation;
-						material.blendSrc = THREE.OneFactor;
-						material.blendDst = THREE.OneMinusSrcAlphaFactor;
-
 					});
-					materials[1].color = {b: 0, g: 1, r: 1};
-					materials[2].specular = {b: 1, g: 1, r: 1};
-					materials[3].specular = {b: 0, g: 0, r: 0};
-
+				
 					soul = new THREE.SkinnedMesh(geometry, new THREE.MeshFaceMaterial(materials));
 					soul.position.set(0, 0, DELTA_Z_SOUL);
 					soul.scale.set(0.01, 0.01, 0.01);
 					mixer = new THREE.AnimationMixer(soul);
-					actions = new Array(geometry.animations.length);
-					for(var i = 0; i < actions.length; i++){
-						actions[i] = mixer.clipAction(geometry.animations[i]);
-						actions[i].setEffectiveWeight(1);
-						actions[i].enabled = true;
-					}
+					action = mixer.clipAction(geometry.animations[1]);
+					action.setEffectiveWeight(1);
+					action.enabled = true;
 					scene.add(soul);
 				});
 
 				light = new THREE.SpotLight(0xffffff);
-				light.position.set(0, DELTA_Y_LIGHT, DELTA_Z_LIGHT);  
+				light.position.set(0, DELTA_Y_LIGHT1, DELTA_Z_LIGHT1);  
 				light.castShadow = true;
 				light.shadow.mapSize.width = RESOLUTION_SHADOW;
 				light.shadow.mapSize.height = RESOLUTION_SHADOW;
+				light.distance = DISTANCE_LIGHT;
+				scene.add(light);
+
+				light = new THREE.SpotLight(0xffffff);
+				light.position.set(0, DELTA_Y_LIGHT2, DELTA_Z_LIGHT2);  
+				light.distance = DISTANCE_LIGHT;
 				scene.add(light);
 			}
 
@@ -205,12 +221,12 @@
 						soul.scale.set(1.25 * time, 1.25 * time, 1.25 * time);
 						soul.position.set(0, 4 * time + 5, DELTA_Z_SOUL);
 					} else if (frame == DELTA_END_SOUL) {
-						actions[2].play();
+						action.play();
 						soul.rotation.x = 0.05 * Math.PI;
 						soul.scale.set(1.25, 1.25, 1.25);
-						soul.position.set(7.5, 9, DELTA_Z_SOUL);
+						soul.position.set(0, 9, DELTA_Z_SOUL);
 					}
-				}		
+				}	
 		
 				for(var i = 0; i < NUM_FIRE; ++i){
 					particle = particles_fire[i];
