add form background color

--- a/source/working/login_normal.html
+++ b/source/working/login_normal.html
@@ -11,6 +11,7 @@
 			form {
 				border: 2px dashed #bcbcbc;
 				padding: 10px;
+				background-color: #fff;
 			}
 			.info { 
 				display: inline-block;
