--- a/source/working/login_normal.html
+++ b/source/working/login_normal.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<style>
-			.form {
+			sign-in {
 				display: flex;
 				height: 100vh;
 				justify-content: center;
@@ -13,7 +13,7 @@
 				padding: 10px;
 				background-color: #fff;
 			}
-			.info { 
+			form div span { 
 				display: inline-block;
 				width: 80px; 
 			}
@@ -32,22 +32,24 @@
 		</style>
 	</head>
 	<body>
-		<div class="form">
+		<sign-in>
 			<form action="/check" method="post">
-				<center><span>Need to <b>SIGN IN</b></span></center>
+				<span>
+					<center>Need to <b>SIGN IN</b></center>
+				</span>
 				<hr>
 				<div>
-					<span class="info">ID</span>
+					<span>ID</span>
 					<input type="text" placeholder="Enter the ID" name="ID" required>
 				</div>
 				<div>
-					<span class="info">Password</span>
+					<span>Password</span>
 					<input type="password" placeholder="Enter the password" name="pwd" required>
 				</div>
 				<div>
 					<button type="submit">Login</button>
 				</div>
 			</form>
-		</div>
+		</sign-in>
 	</body>
 </html>
