--- a/source/working/login_fail.html
+++ b/source/working/login_fail.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<link rel="icon" type="image/png" href="img/bird.png">
+		<title>Personal Page:: Dreamline91</title>
 		<style>
 			body {
 				background-color: #faa;
