--- a/source/working/login_normal.html
+++ b/source/working/login_normal.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<title>Personal Page:: Dreamline91</title>
+		<link rel="icon" type="image/png" href="img/bird.png">
 		<style>
 			body {
 				overflow: hidden;
