--- a/source/working/login_fail.html
+++ b/source/working/login_fail.html
@@ -41,9 +41,14 @@
 			}
 			button {
 				display: block;
-				margin: 0 auto;
 				margin-top: 10px;
-				width: 200px;
+				padding: 0;
+				width: 100%;
+				height: 40px;
+				background-color: #efefef;
+				border: 1px solid #bcbcbc;
+				border-radius: 6px;
+				cursor: pointer;
 			}
 			div {
 				margin-top: 5px;
