--- a/source/working/index.html
+++ b/source/working/index.html
@@ -11,17 +11,25 @@
 				margin: 0;
 				width: 100%;
 				height: 100%;
-				background-color: #fafafa;
-				overflow: hidden;
+			}
+			cover {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				background-image: url("img/background_index.jpg");
+                background-size: cover;
+                overflow: hidden;
+				opacity: 0.6;
+				z-index: -1;
 			}
 			header {
 				display: table;
 				width: 100%;
 				height: 50px;
 				background-color: #fff;
-				moz-box-shadow: 0 2px 2px rgba(108, 108, 108, 0.5);
-				-webkit-box-shadow: 0 2px 2px rgba(108, 108, 108, 0.5);
-				box-shadow: 0 2px 2px rgba(108, 108, 108, 0.5);
+				moz-box-shadow: 0 2px 2px rgba(108, 108, 108, 0.7);
+				-webkit-box-shadow: 0 2px 2px rgba(108, 108, 108, 0.7);
+				box-shadow: 0 2px 2px rgba(108, 108, 108, 0.7);
 			}
 			header div {
 				display: table-cell;
@@ -65,6 +73,11 @@
 				right: 0;
 				width: 200px;
 			}
+			bottom {
+				position: absolute;
+				right: 10px;
+				bottom: 10px;
+			}
 		</style>
 		<script>	
 			$(document).ready(function() {
@@ -73,6 +86,7 @@
 		</script>
 	</head>
 	<body>
+		<cover></cover>
 		<header>
 			<div>
 				<div></div>
@@ -93,5 +107,8 @@
 				<div>즐겨찾기</div>
 			</favorite>
 		</main>
+		<bottom>
+			Image from: https://pixabay.com/ko/photos/가을-안개-경치-이슬-자연-961745
+		</bottom>
 	</body>
 </html>
