--- a/source/working/html/login_fail.html
+++ b/source/working/html/login_fail.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<meta name="robots" content="noindex,nofollow">
 		<link rel="icon" type="image/png" href="img/bird.png">
 		<title>Personal Page:: Dreamline91</title>
 		<style>
