--- a/source/working/html/login_normal.html
+++ b/source/working/html/login_normal.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="robots" content="noindex,nofollow">
 		<title>Personal Page:: Dreamline91</title>
 		<link rel="icon" type="image/png" href="img/bird.png">
 		<style>
