read favorite form csv

--- a/source/working/html/index.html
+++ b/source/working/html/index.html
@@ -83,6 +83,20 @@
 				right: 0;
 				width: 200px;
 			}
+			favorite div a {
+				color: #000;
+				text-decoration: none;
+			}
+			favorite div div { 
+				line-height: 32px;
+			}
+			favorite div div img {
+				width: 32px;
+				vertical-align: middle;
+			}
+			favorite div div span {
+				vertical-align: middle;
+			}
 			bottom {
 				position: absolute;
 				right: 10px;
@@ -116,7 +130,10 @@
 				<div>본문</div>
 			</inner>
 			<favorite>
-				<div>즐겨찾기</div>
+				<div>
+					<span>즐겨찾기</span>
+					:)favorite.csv&
+				</div>
 			</favorite>
 		</main>
 		<bottom>
