--- a/source/working/html/index.html
+++ b/source/working/html/index.html
@@ -80,6 +80,12 @@
 			inner {
 				left: 200px;
 			}
+			inner div {
+				padding: 5px;
+				height: 100%;
+				background-color: rgba(255, 255, 255, 0.6);
+				border-radius: 2px;
+			}
 			favorite {
 				right: 0;
 				width: 200px;
