--- a/source/working/html/index.html
+++ b/source/working/html/index.html
@@ -48,6 +48,11 @@
 				float: right;
 				padding-right: 10px;
 			}
+			header a {
+				cursor: pointer;
+				color: #000;
+				text-decoration: none;
+			}
 			main {
 				position: relative;
 				height: 100%;
@@ -94,7 +99,7 @@
 				background-color: rgba(255, 255, 255, 0.6); 
 				border: 0; 
 				border-radius: 2px; 
-				overflow-y: hidden;
+				overflow: hidden;
 			}
 			inner html {
 				padding: 5px;
@@ -138,7 +143,7 @@
 		<header>
 			<div>
 				<div></div>
-				<div>Personal Page</div>
+				<div><a href="/">Personal Page</a></div>
 				<div><a href="logout">로그아웃</a></div>
 			</div>
 		</header>
