--- a/source/working/html/login_fail.html
+++ b/source/working/html/login_fail.html
@@ -8,6 +8,9 @@
 			body {
 				background-color: #faa;
 			}
+			form {
+				box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+			}	
 			form div:nth-child(1) {
 				width: 200px;
 				line-height: 50px;
