design for title of index

--- a/source/working/html/index.html
+++ b/source/working/html/index.html
@@ -43,6 +43,18 @@
 			}
 			header div div {
 				display: inline-block;
+				line-height: 50px;
+			}
+			header div img {
+				line-height: 50px;
+				height: 50px;
+				margin-top: -5px;
+				margin-right: 5px;
+				vertical-align: middle;
+			}
+			header div div:nth-child(2) {
+				font-size: 30px;
+				font-family: "Orbit-B BT";
 			}
 			header div div:nth-child(3) {
 				float: right;
@@ -140,7 +152,7 @@
 		<header>
 			<div>
 				<div></div>
-				<div><a href="/">Personal Page</a></div>
+				<div><a href="/"><img src="img/bird.png"/>Personal Page</a></div>
 				<div><a href="logout">로그아웃</a></div>
 			</div>
 		</header>
