--- a/source/working/html/index.html
+++ b/source/working/html/index.html
@@ -41,6 +41,9 @@
 				text-align: center;
 				vertical-align: middle;
 			}
+			header div:nth-child(2n+1){
+				width: 100px;
+			}
 			header div div {
 				display: inline-block;
 				line-height: 50px;
