--- a/source/working/html/index.html
+++ b/source/working/html/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="robots" content="noindex,nofollow">
 		<link rel="icon" type="image/png" href="img/bird.png">
+		<link rel="stylesheet" type="text/css" href="css/no_drag.css">
 		<title>Personal Page :: Dreamline91</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<title>Personal Page</title>
