--- a/source/working/html/login_normal.html
+++ b/source/working/html/login_normal.html
@@ -5,6 +5,7 @@
 		<meta name="robots" content="noindex,nofollow">
 		<title>Personal Page :: Dreamline91</title>
 		<link rel="icon" type="image/png" href="img/bird.png">
+		<link rel="stylesheet" type="text/css" href="css/no_drag.css">
 		<style>
 			body {
 				overflow: hidden;
@@ -29,9 +30,9 @@
 				text-align: center;
 			}
 			form div:nth-child(1) span {
-                width: 120px;
+				width: 120px;
 				vertical-align: middle;
-            }
+			}
 			img{
 				width: 50px;
 				vertical-align: middle;
