--- a/source/working/html/index.html
+++ b/source/working/html/index.html
@@ -9,14 +9,11 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<title>Personal Page</title>
 		<style>
-			html{
-				height: 100%;
-				overflow: hidden;
-			}
-			body{
+			html, body{
 				margin: 0;
 				width: 100%;
 				height: 100%;
+				overflow: hidden;
 			}
 			cover {
 				position: absolute;
