--- a/source/working/html/login_fail.html
+++ b/source/working/html/login_fail.html
@@ -7,9 +7,14 @@
 		<link rel="stylesheet" type="text/css" href="css/no_drag.css">
 		<title>Personal Page :: Dreamline91</title>
 		<style>
+			html, body {
+				margin: 0;
+				width: 100%;
+				height: 100%;
+				overflow: hidden;
+			}
 			body {
 				background-color: #faa;
-				overflow: hidden;
 			}
 			cover {
 				position: absolute;
@@ -23,6 +28,8 @@
 				z-index: -1;
 			}
 			form {
+				moz-box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+				-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 1);
 				box-shadow: 0 0 10px rgba(0, 0, 0, 1);
 			}	
 			form div:nth-child(1) {
@@ -31,34 +38,32 @@
 				text-align: center;
 			}
 			form div:nth-child(1) span {
-                width: 120px;
+                		width: 120px;
 				vertical-align: middle;
-            }
+           		}	
 			img {
 				width: 50px;
 				vertical-align: middle;
 			}
-			sign-in {
-				display: flex;
-				height: 100vh;
-				justify-content: center;
-				align-items: center;
-			}
 			form {
-				border: 2px dashed #bcbcbc;
+				position: absolute;
+				left: calc(50% - 119px);
+				top: calc(50% - 97px);
+				width: 228px;
+				height: 184x;
 				padding: 10px;
 				padding-top: 0;
 				background-color: #fff;
+				moz-box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+				-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+				box-shadow: 0 0 10px rgba(0, 0, 0, 1);
 			}
 			form div span { 
 				display: inline-block;
 				width: 80px; 
 			}
-			error center {
-				margin-top: 5px;
-			}
 			input {
-				width: 120px;
+				width: 134px;
 			}
 			button {
 				display: block;
@@ -83,31 +88,26 @@
 	</head>
 	<body>
 		<cover></cover>
-		<sign-in>
-			<form action="/check" method="post">
-				<div>
-					<img src="img/bird.png"/>
-					<span>
-						<b>Personal Page</b>
-					</span>
-				</div>
-				<hr>
-				<div>
-					<span>ID</span>
-					<input type="text" placeholder="Enter the ID" name="ID" required>
-				</div>
-				<div>
-					<span>Password</span>
-					<input type="password" placeholder="Enter the password" name="pwd" required>
-				</div>
-				<div>
-					<button type="submit">Login</button>
-				</div>
-				<error>
-					<center>check your Input!</center>
-				</error>
-			</form>
-		</sign-in>
+		<form action="/check" method="post">
+			<div>
+				<img src="img/bird.png"/>
+				<span>
+					<b>Personal Page</b>
+				</span>
+			</div>
+			<hr>
+			<div>
+				<span>ID</span>
+				<input type="text" placeholder="Enter the ID" name="ID" required>
+			</div>
+			<div>
+				<span>Password</span>
+				<input type="password" placeholder="Enter the password" name="pwd" required>
+			</div>
+			<div>
+				<button type="submit">Re-Login</button>
+			</div>
+		</form>
 		<bottom>
 			Image from: https://pixabay.com/ko/photos/칠레-도로-산맥-자연-풍경-5056788/
 		</bottom>
