--- a/source/working/html/index.html
+++ b/source/working/html/index.html
@@ -9,6 +9,12 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<title>Personal Page</title>
 		<style>
+			@font-face{
+				font-family: "orbit";
+				src: url("font/OrbitB__BT.ttf") format("truetype");
+				font-style: normal;
+				font-weight: normal;
+			}
 			html, body{
 				margin: 0;
 				width: 100%;
@@ -55,7 +61,7 @@
 			}
 			header div div:nth-child(2) {
 				font-size: 30px;
-				font-family: "Orbit-B BT";
+				font-family: orbit;
 			}
 			header div div:nth-child(3) {
 				float: right;
