--- a/source/working/html/index.html
+++ b/source/working/html/index.html
@@ -165,8 +165,13 @@
 				text-decoration: none;
 			}
 			menu div hr {
-				border-top: 1px dashed #aaa;
+				border-top: 1px dashed #fff;
 				border-bottom: 0px dashed #aaa;
+			}
+			menu div div{
+				margin: 0;
+				padding: 0;
+				background: rgba(0, 0, 0, 0);
 			}
 			inner {
 				left: 200px;
