--- a/source/working/html/index.html
+++ b/source/working/html/index.html
@@ -15,6 +15,12 @@
 				font-style: normal;
 				font-weight: normal;
 			}
+			@font-face{
+                                font-family: "squareB";
+                                src: url("font/NanumSquareRoundB.ttf") format("truetype");
+                                font-style: normal;
+                                font-weight: normal;
+                        }
 			html, body{
 				margin: 0;
 				width: 100%;
@@ -139,6 +145,9 @@
 				padding: 10px;
 				width: 160px;
 				height: 160px;
+			}
+			profile span{
+				font-family: squareB;
 			}
 			menu {
 				margin: 0;
